discussion/kv_engine/177982/177982_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[WIP] Add support for fake bucket

Change-Id: I8b08065f5a142c4f09816550d64330e1d8fc6b69

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-26 08:28:04.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-26 08:37:26.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47973/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/ep_engine.cc(2316): error C2065: "ScopeTimer": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47973/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19139/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/cookie.cc:908:5: error: use of undeclared identifier "ScopeTimer" [clang-diagnostic-error]
    ScopeTimer<HdrMicroSecStopwatch, SpanStopwatch> timer(
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/cookie.cc:908:52: error: expected ";" after expression [clang-diagnostic-error]
    ScopeTimer<HdrMicroSecStopwatch, SpanStopwatch> timer(
                                                   ^
                                                   ;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/cookie.cc:908:53: error: use of undeclared identifier "timer"; did you mean "timex"? [clang-diagnostic-error]
    ScopeTimer<HdrMicroSecStopwatch, SpanStopwatch> timer(
                                                    ^
/usr/include/x86_64-linux-gnu/bits/timex.h:26:8: note: "timex" declared here
struct timex
       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19139/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/cookie.cc:908:5:
error: use of undeclared identifier "ScopeTimer" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19139/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40313/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:2316:54:
error: expected ";" after expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40313/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8825/ : FAILURE

Compile error at [2022-07-26T08:33:17.058Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/ep_engine.cc:2316:54:
error: expected ";" after expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8825/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22114/ : FAILURE

Compile error at [2022-07-26T08:34:31.113Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/ep_engine.cc:2316:54:
error: expected ";" after expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22114/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21047/ : FAILURE

Compile error at [2022-07-26T08:31:14.867Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/benchmarks/tracing_bench.cc:48:13:
error: ?ScopeTimer? was not declared in this scope; did you mean ?ScopeTimer2??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21047/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21411/ : FAILURE

Compile error at [2022-07-26T08:34:14.073Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/ep_engine.cc:2316:5:
error: ?ScopeTimer? was not declared in this scope; did you mean ?ScopeTimer2??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21411/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20293/ : FAILURE

Compile error at [2022-07-26T08:35:18.375Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/benchmarks/tracing_bench.cc:48:40:
error: expected ";" after expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20293/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29442/ : FAILURE

Compile error at [2022-07-26T08:36:44.313Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/ep_engine.cc:2316:54:
error: expected ";" after expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29442/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8922/ : FAILURE

Compile error at [2022-07-26T08:36:20.684Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/benchmarks/tracing_bench.cc:48:13:
error: ?ScopeTimer? was not declared in this scope; did you mean ?ScopeTimer2??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8922/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18305/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
